# Computer-Vision-with-Raspberry-Pi

./: README.md  setup.sh
Application/: CMakeLists.txt  main.cpp
Application/src/: facedetector.cpp  facedetector.hpp
OpenCV/: README.md
Tests/opencv/: CMakeLists.txt  main.cpp
